# tls

./: .travis.yml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  appveyor.yml
.github/workflows/: CI.yml  ci.yml
examples/: client.rs  server.rs  std-client.rs
examples/client/: Cargo.toml
examples/client/src/: main.rs
examples/server/: Cargo.toml
examples/server/src/: main.rs
src/: client.rs  common.rs  futures_impl.rs  lib.rs  proto.rs  server.rs  test_0rtt.rs  tokio_impl.rs
src/common/: handshake.rs  mod.rs  test_stream.rs  vecbuf.rs
tests/: badssl.rs  early-data.rs  test.rs
tokio-native-tls/: CHANGELOG.md  Cargo.toml  README.md
tokio-native-tls/examples/: echo.rs
tokio-native-tls/scripts/: generate-certificate.sh
tokio-native-tls/src/: lib.rs
tokio-native-tls/tests/: buffered.rs  smoke.rs
tokio-rustls/: Cargo.toml  README.md
tokio-rustls/.github/actions-rs/: grcov.yml
tokio-rustls/.github/workflows/: ci.yml
tokio-rustls/examples/client/: Cargo.toml
tokio-rustls/examples/client/src/: main.rs
tokio-rustls/examples/danger_client/: Cargo.toml
tokio-rustls/examples/danger_client/src/: main.rs
tokio-rustls/examples/dangleclient/: Cargo.toml
tokio-rustls/examples/dangleclient/src/: main.rs
tokio-rustls/examples/server/: Cargo.toml
tokio-rustls/examples/server/src/: main.rs
tokio-rustls/src/: client.rs  lib.rs  server.rs  stream.rs
tokio-rustls/src/common/: handshake.rs  mod.rs  test_stream.rs  vecbuf.rs
tokio-rustls/src/server/: async_acceptor.rs
tokio-rustls/tests/: async_acceptor.rs  badssl.rs  client.cert  client.rsa  early-data.rs  end.cert  end.chain  end.rsa  test.rs  utils.rs
