[package]
name = "tokio-rustls"
version = "0.12.0-alpha"
authors = ["quininer kel <quininer@live.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/quininer/tokio-rustls"
homepage = "https://github.com/quininer/tokio-rustls"
documentation = "https://docs.rs/tokio-rustls"
readme = "README.md"
description = "Asynchronous TLS/SSL streams for Tokio using Rustls."
categories = ["asynchronous", "cryptography", "network-programming"]
edition = "2018"

[badges]
travis-ci = { repository = "quininer/tokio-rustls" }
appveyor = { repository = "quininer/tokio-rustls" }

[dependencies]
smallvec = "0.6"
tokio-io = "0.2.0-alpha.1"
futures-core-preview = "0.3.0-alpha.17"
rustls = "0.15"
webpki = "0.19"

[features]
early-data = []

[dev-dependencies]
tokio = "0.2.0-alpha.1"
lazy_static = "1"
webpki-roots = "0.16"
