[package]
name = "tokio-rustls"
version = "0.12.0-alpha.8"
authors = ["quininer kel <quininer@live.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/quininer/tokio-rustls"
homepage = "https://github.com/quininer/tokio-rustls"
documentation = "https://docs.rs/tokio-rustls"
readme = "README.md"
description = "Asynchronous TLS/SSL streams for Tokio using Rustls."
categories = ["asynchronous", "cryptography", "network-programming"]
edition = "2018"

[badges]
github-actions = { repository = "quininer/tokio-rustls", workflow = "ci" }

[dependencies]
tokio = "0.2.0"
futures-core = "0.3.1"
rustls = "0.16"
webpki = "0.21"

[features]
early-data = []
dangerous_configuration = ["rustls/dangerous_configuration"]

[dev-dependencies]
tokio = { version = "0.2.0", features = ["macros", "net", "io-util", "rt-core", "time"] }
futures-util = "0.3.1"
lazy_static = "1"
webpki-roots = "0.18"
