[package]
name = "tokio-rustls"
version = "0.21.1"
authors = ["quininer kel <quininer@live.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/tokio-rs/tls"
homepage = "https://github.com/tokio-rs/tls"
documentation = "https://docs.rs/tokio-rustls"
readme = "README.md"
description = "Asynchronous TLS/SSL streams for Tokio using Rustls."
categories = ["asynchronous", "cryptography", "network-programming"]
edition = "2018"

[dependencies]
tokio = "0.3.5"
rustls = "0.19"
webpki = "0.21"

[features]
early-data = []
dangerous_configuration = ["rustls/dangerous_configuration"]

[dev-dependencies]
tokio = { version = "0.3.5", features = ["full"] }
futures-util = "0.3.1"
lazy_static = "1"
webpki-roots = "0.21"
