[package]
name = "client"
version = "0.1.0"
authors = ["quininer <quininer@live.com>"]

[dependencies]
webpki = "0.18.1"
tokio-rustls = { path = "../.." }
tokio = "0.1"
clap = "2"
webpki-roots = "0.15"

[target.'cfg(unix)'.dependencies]
tokio-file-unix = "0.5"

[target.'cfg(not(unix))'.dependencies]
tokio-fs = "0.1"
