[package]
name = "client"
version = "0.1.0"
authors = ["quininer <quininer@live.com>"]
edition = "2018"

[dependencies]
futures = { package = "futures-preview", version = "0.3.0-alpha.16", features = ["io-compat"] }
romio = "0.3.0-alpha.8"
structopt = "0.2"
tokio-rustls = { path = "../.." }
webpki-roots = "0.16"
tokio-stdin-stdout = "0.1"
