[package]
name = "server"
version = "0.1.0"
authors = ["quininer <quininer@live.com>"]

[dependencies]
rustls = "0.12"
tokio-rustls = { path = "../..", default-features = false, features = [ "unstable-futures" ] }

tokio = { version = "0.1", features = [ "unstable-futures" ] }
futures = "0.2.0-beta"

clap = "2.26"
