[package]
name = "client"
version = "0.1.0"
authors = ["quininer <quininer@live.com>"]
edition = "2018"
rust-version = "1.56"

[dependencies]
tokio = { version = "1.0", features = [ "full" ] }
argh = "0.1"
tokio-rustls = { path = "../.." }
webpki = { package = "rustls-webpki", version = "0.100.0", features = ["alloc", "std"] }
webpki-roots = "0.22"
rustls-pemfile = "1.0"
